--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="main-content">
+<!--<div class="main-content">
 
         <div class="container-fluid">
             <div class="row">
@@ -392,4 +392,32 @@
                 </div>
             </div>
         </div>
-</div>
+</div>-->
+<!--<div class="main-content">
+  <div class="container-fluid">
+    <div class="row">
+
+      <mat-card>Simple card</mat-card>
+    </div>
+  </div>
+</div>-->
+<div class="main-content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="card">
+                    <div class="card-header" data-background-color="red">
+                        <h4 class="title">Dashboard</h4>
+                        <p class="category"></p>
+                    </div>
+                    <div class="card-content">
+
+                        <div class="row">
+                            <div class="col-md-12">
+                                <mat-card  >
+                                </mat-card>
+
+                                <div class="clearfix"></div>
+
+                            </div>
+                        </div>
