--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<!--<div class="wrapper">
+<div class="wrapper">
     <div class="sidebar" data-color='red' data-image="">
         <app-sidebar></app-sidebar>
         <div class="sidebar-background" style="background-image: url(../assets/img/sidebar-4.jpg)"></div>
@@ -10,9 +10,4 @@
             <app-footer></app-footer>
         </div>
     </div>
-</div>-->
-<!--<app-main></app-main>-->
-<app-landing></app-landing>
-<router-outlet></router-outlet>
-
-
+</div>
