remove landing page bug

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
     </div>
 </div>-->
 <!--<app-main></app-main>-->
-<app-landing></app-landing>
+<!--<app-landing></app-landing>-->
 <router-outlet></router-outlet>
 
 
