--- a/src/app/new-articles/new-articles.component.html
+++ b/src/app/new-articles/new-articles.component.html
@@ -10,8 +10,35 @@
           <div class="card-content">
             <div class="row">
               <div class="col-md-12">
-                <mat-card>
-                </mat-card>
+                <!--<mat-card>-->
+                <div class="card">
+                  <div class="card-header">
+                    Content
+                  </div>
+                  <div class="card-block">
+                    <!--<h4 class="card-title">Special title treatment</h4>-->
+                    <!--<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>-->
+                    <mat-form-field>
+                      <input matInput [matDatepicker]="picker" placeholder="Choose a date">
+                      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                      <mat-datepicker #picker></mat-datepicker>
+                    </mat-form-field>
+                    <button href="#" class="btn btn-danger">Summary</button>
+                    <form>
+                      <div class="form-group">
+                        <label for="exampleInputEmail1">Title</label>
+                        <input type="text" class="form-control" id="exampleInputTitle" aria-describedby="emailHelp" placeholder="Enter title">
+                      </div>
+                      <div class="form-group">
+                        <label for="exampleFormControlTextarea1">Summary</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="2"></textarea>
+                      </div>
+                      <button type="submit" class="btn btn-primary">Submit</button>
+                    </form>
+
+                  </div>
+                </div>
+                <!--</mat-card>-->
               </div>
             </div>
           </div>
@@ -20,3 +47,4 @@
     </div>
   </div>
 </div>
+
