--- a/src/app/add-banners/add-banners.component.html
+++ b/src/app/add-banners/add-banners.component.html
@@ -11,6 +11,8 @@
             <div class="row">
               <div class="col-md-12">
                 <mat-card>
+                  <input type='file' (change)="readURL(this);" />
+                  <img id="blah" src="http://placehold.it/180" alt="your image" />
                 </mat-card>
               </div>
             </div>
