--- a/src/app/new-articles/new-articles.component.html
+++ b/src/app/new-articles/new-articles.component.html
@@ -10,19 +10,17 @@
           <div class="card-content">
             <div class="row">
               <div class="col-md-12">
-                <!--<mat-card>-->
                 <div class="card">
                   <div class="card-header">
                     Content
                   </div>
                   <div class="card-block">
-                    <!--<h4 class="card-title">Special title treatment</h4>-->
-                    <!--<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>-->
-                    <mat-form-field>
-                      <input matInput [matDatepicker]="picker" placeholder="Choose a date">
-                      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                      <mat-datepicker #picker></mat-datepicker>
-                    </mat-form-field>
+                    <div class="form-group row">
+                      <label for="example-datetime-local-input" class="col-2 col-form-label">Date and time</label>
+                      <div class="col-10">
+                        <input class="form-control" type="datetime-local" value="2018-01-12T10:25:00" id="example-datetime-local-input">
+                      </div>
+                    </div>
                     <button href="#" class="btn btn-danger">Summary</button>
                     <form>
                       <div class="form-group">
@@ -35,10 +33,8 @@
                       </div>
                       <button type="submit" class="btn btn-primary">Submit</button>
                     </form>
-
                   </div>
                 </div>
-                <!--</mat-card>-->
               </div>
             </div>
           </div>
@@ -47,4 +43,3 @@
     </div>
   </div>
 </div>
-
